[gd_scene load_steps=4 format=3 uid="uid://brnul2menjchk"]

[ext_resource type="Script" path="res://addons/btree/Editor/rtree.gd" id="1"]
[ext_resource type="Script" path="res://addons/btree/Editor/client_debugger.gd" id="2"]
[ext_resource type="Script" path="res://addons/btree/Editor/debug_graph.gd" id="3"]

[node name="rtree" type="Window"]
size = Vector2i(800, 600)
visible = false
wrap_controls = true
popup_window = true
extend_to_title = true
script = ExtResource("1")

[node name="client_debugger" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox2" type="HBoxContainer" parent="layout"]
layout_mode = 2

[node name="Label" type="Label" parent="layout/hbox2"]
layout_mode = 2
text = "Select a BTREE : "

[node name="split" type="HSplitContainer" parent="layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200

[node name="rtree" type="Tree" parent="layout/split"]
layout_mode = 2
size_flags_vertical = 3

[node name="debug_graph" type="GraphEdit" parent="layout/split"]
layout_mode = 2
script = ExtResource("3")

[node name="hbox3" type="HBoxContainer" parent="layout"]
visible = false
layout_mode = 2
alignment = 2

[node name="pause" type="Button" parent="layout/hbox3"]
layout_mode = 2
text = "PAUSED"

[node name="step" type="Button" parent="layout/hbox3"]
layout_mode = 2
text = "STEP"

[connection signal="about_to_popup" from="." to="." method="_on_rtree_about_to_show"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="layout/split/rtree" to="." method="_on_rtree_item_selected"]
[connection signal="gui_input" from="layout/split/debug_graph" to="layout/split/debug_graph" method="gui_input"]
[connection signal="pressed" from="layout/hbox3/pause" to="." method="_on_pause_pressed"]
[connection signal="button_down" from="layout/hbox3/step" to="." method="_on_step_button_down"]
[connection signal="button_up" from="layout/hbox3/step" to="." method="_on_step_button_up"]
